--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "Node Js Connection to Microsoft SQL Server",
   "scripts": {
-    "start": "node ./src/lib/server.js"
+    "start": "concurrently \"nodemon -q src/server.js\"",
+    "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:generate": "npx prisma generate",
+    "prisma:format": "npx prisma format",
+    "prisma:seed": "node prisma/seed.js"
   },
   "keywords": [
     "mssql"
@@ -13,16 +17,20 @@
     "url": "https://github.com/cadalzolc/node-mssql.git"
   },
   "author": {
-   "name": "Lambert Cadalzo",
-   "website": "https://cadalzo.com"
+    "name": "Lambert Cadalzo",
+    "website": "https://cadalzo.com"
   },
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "@prisma/client": "^5.16.2",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "msnodesqlv8": "^2.0.8",
     "mssql": "^6.3.0",
-    "querystring": "^0.2.0"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.16.2"
   },
   "devDependencies": {}
 }
